--- a/styles.css
+++ b/styles.css
@@ -92,6 +92,8 @@ header {
     padding: 7px 10px;
     cursor: pointer;
     margin-left: auto;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2), inset 0 -1px 2px rgba(0, 0, 0, 0.3);
+    transition: transform 0.1s ease-in-out;
 }
 
 .header-separate-line{
@@ -100,13 +102,19 @@ header {
     background-color:#8b8b8b;
 }
 
-@media (max-width: 1200px) {
+@media (max-width: 1100px) {
     .delivery, .working-hours {
-      display: none;
+        display: none;
     }
 
     .login-btn{
         margin-left: 0;
+    }
+}
+
+@media (max-width: 650px) {
+    .phone{
+        display: none;
     }
 }
 
@@ -167,8 +175,9 @@ main {
 .pizzas {
     display: flex;
     flex-direction: column;
-    width: 80%;
+    width: 90%;
     margin-right: 20px;
+    align-items: center;
 }
 
 .pizzas h1 {
@@ -190,7 +199,7 @@ main {
 
 .filter-buttons {
     align-self: center;
-    width: 75%;
+    width: 70%;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
@@ -205,16 +214,32 @@ main {
     cursor: pointer;
     padding: 10px 20px;
     transition: background-color 0.3s, color 0.3s;
-  }
-  
-  .select-btn.active {
+}
+
+.select-btn.active {
     background-color: #ff8c00;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2), inset 0 -1px 2px rgba(0, 0, 0, 0.3);
+    transition: transform 0.1s ease-in-out;
     color: white;
     border-radius: 5px;
-  }
+}
+
+@media(max-width:720px){
+    .pizzas h1 {
+        align-self:self-start;
+        margin-left:20%;
+    }
+    .filter-buttons{
+        flex-direction: column;
+    }
+    .filter-buttons .select-btn{
+        width:50%
+    }
+}
 
 .pizza-list {
     display: flex;
+    flex-wrap: wrap;
 }
 
 .pizza {
@@ -223,7 +248,9 @@ main {
     border: 1px solid #ccc;
     padding: 20px;
     margin: 10px;
-    text-align: center;
+    text-align: left;
+    min-width:220px;
+    max-width: 250px;
 }
 
 .pizza img {
@@ -232,7 +259,8 @@ main {
 }
 
 .pizza h2 {
-    font-size: 18px;
+    color:#ff9800;
+    font-size: 24px;
     margin: 10px 0;
 }
 
@@ -241,17 +269,42 @@ main {
     margin-bottom: 20px;
 }
 
-.sizes {
+.size-choice{
     display: flex;
+    flex-direction: row;
+}
+
+.size-1, .size-2 {
+    width:50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: space-around;
 }
 
-.sizes button {
+.radius-info, .weight-info{
+    font-size: 14px;
+}
+
+.price-info{
+    margin-top: 5px;
+    font-size: 24px;
+}
+
+.currency-info{
+    font-size: 14px;
+}
+
+.size-choice button {
+    margin-top:5px;
+    width:60%;
     background-color: #ff9800;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2), inset 0 -1px 2px rgba(0, 0, 0, 0.3);
+    transition: transform 0.1s ease-in-out;
     border-radius: 5px;
     color: #fff;
     border: none;
-    padding: 10px;
+    padding: 5px 5px;
     cursor: pointer;
 }
 
@@ -262,7 +315,7 @@ main {
     right:0;
     background-color: white;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    overflow: hidden;
+    overflow:auto;
     min-width: 300px;
 }
 
@@ -333,40 +386,38 @@ main {
     justify-content: space-between;
 }
 
-.quantity-btn {
-    color: white;
-    border: none;
-    border-radius: 50%;
+.item-quantity button{
     width: 30px;
     height: 30px;
-    font-size: 20px;
+    border-radius: 50%;
+    border: none;
+    font-weight: bold;
+    cursor: pointer;
     display: flex;
     justify-content: center;
     align-items: center;
-    cursor: pointer;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2), inset 0 -1px 2px rgba(0, 0, 0, 0.3);
+    transition: transform 0.1s ease-in-out;
 }
 
 .minus{
-    background-color: rgb(217, 0, 0);
+    font-size: 20px;
+    color: white;
+    background-color:#dc0101;
 }
 
 .plus{
-    background-color: rgb(1, 174, 1);
+    font-size: 20px;
+    color: white;
+    background-color:#01be07;
 }
 
 .remove-item {
-    background-color: #ff8c00;
-    color: white;
-    border: none;
-    border-radius: 50%;
-    width: 30px;
-    height: 30px;
-    font-size: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    margin-left: 10px;
+    margin-left: 20px;
+    font-size: 14px;
+    background-color: white;
+    color: #ff8c00;
+    background-color:white;
 }
 
 .item-image {
@@ -395,6 +446,8 @@ main {
 .order-btn {
     width: 80%;
     background-color: #ff8c00;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2), inset 0 -1px 2px rgba(0, 0, 0, 0.3);
+    transition: transform 0.1s ease-in-out;
     color: white;
     border: none;
     border-radius: 5px;
