--- a/styles.css
+++ b/styles.css
@@ -498,8 +498,73 @@ main {
     margin-left: auto;
 }
 
+.stats-btn {
+    width: 80%;
+    background-color: #57a84c;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2), inset 0 -1px 2px rgba(0, 0, 0, 0.3);
+    transition: transform 0.1s ease-in-out;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    font-size: 18px;
+    cursor: pointer;
+    margin-top: 10px;
+}
+
 .order-btn {
     width: 80%;
+    background-color: #ff8c00;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2), inset 0 -1px 2px rgba(0, 0, 0, 0.3);
+    transition: transform 0.1s ease-in-out;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    font-size: 18px;
+    cursor: pointer;
+    margin-top: 10px;
+}
+
+.table-body{
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.table-body h1 {
+    margin-top: 100px;
+    text-align: center;
+    color: rgb(0, 0, 0);
+    padding: 10px;
+    margin: 0;
+}
+.table-body #table-container {
+    margin: 20px auto;
+    width: 80%;
+}
+.table-body table {
+    width: 100%;
+    border-collapse: collapse;
+    background-color: white;
+}
+.table-body th, td {
+    border: 1px solid black;
+    padding: 8px;
+    text-align: center;
+}
+.table-body th {
+    background-color: orange;
+    color: white;
+}
+
+.table-body tr:last-child {
+    font-weight: bold;
+    background-color: #e0e0e0;
+}
+
+.return-btn {
+    width: 15%;
     background-color: #ff8c00;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2), inset 0 -1px 2px rgba(0, 0, 0, 0.3);
     transition: transform 0.1s ease-in-out;
